<resources>
    <string name="app_name">Echo</string>
    <string name="my_name">Andrey Nicolas Sepulveda Carvajal</string>
    <string name="register">Registrate</string>
    <string name="introductive_text">Inicia una nueva aventura con Echo y descubre una nueva forma de ver el mundo</string>
    <string name="start">Comienza</string>
    <string name="welcome_text_loggin">La aventura esta por iniciar, por favor inicia sesion</string>
    <string name="loggin">Ingresar</string>
    <string name="password_lost">Recupera Tu Contraseña</string>
    <string name="google_loggin">Ingresa con Google</string>
    <string name="create_account">No tienes cuenta?</string>
</resources>